Fix feed visibility by moving it to homepage sections

--- a/index.html
+++ b/index.html
@@ -197,12 +197,20 @@
           </div>
         </div>
       </section>
+      <!-- Live Feed Section -->
+      <section id="feed-section" class="feed-section-container">
+        <div class="section-container">
+          <div class="feed-header text-center">
+            <h2 class="section-title">THE <span class="gold-text">SIGNAL.</span></h2>
+            <p class="section-desc">Raw intelligence stream from the global collective.</p>
+          </div>
+          <section id="ideas-container" class="ideas-list"></section>
+        </div>
+      </section>
     </section>
 
     <!-- Feed Screen (Legacy / Secondary) -->
-    <section id="feed-screen" class="screen site-screen immersive-main immersive-reels-container">
-      <section id="ideas-container" class="ideas-list"></section>
-    </section>
+
   </main>
 
   <!-- Success Overlay -->
